--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -149,7 +149,7 @@ p {
   width: 90vw;
   margin: 0 auto;
   max-width: 40rem;
-  margin-top: 5rem;
+  margin-top: 7vh;
   text-align: center;
 }
 @media screen and (min-width: 992px) {
@@ -174,8 +174,8 @@ h3 {
 .lorem-form {
   text-transform: capitalize;
   letter-spacing: var(--spacing);
-  margin-top: 2rem;
-  margin-bottom: 4rem;
+  margin-top: 3vh;
+  margin-bottom: 6vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -197,4 +197,9 @@ button {
 }
 .result {
   margin-bottom: 2rem;
+}
+
+.lorem-text {
+  max-height: 70vh;
+  overflow-y: auto;
 }
